--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
+    "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.10",
     "@types/react-table": "^7.7.7",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
-    "react-tooltip": "^4.2.21",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
