--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react-dom": "^17.0.10",
     "@types/react-table": "^7.7.7",
     "bootstrap": "^5.1.3",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "typescript": "^4.4.4",
