--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     on-failure: ABORT
     commands:
       - echo Build app on `date`
-      - export REACT_APP_BUILD_DATE=$(date +'%FT%T%Z')
+      - export REACT_APP_BUILD_DATE=$(date +'%FT%TZ')
       - npm run build
   post_build:
     commands:
