--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-bootstrap": "^0.32.28",
@@ -14,6 +15,7 @@
     "@types/react-table": "^7.7.7",
     "bootstrap": "^5.1.3",
     "history": "^5.1.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dnd": "^14.0.4",
