--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "react-vtree": "^2.0.4",
+    "react-window": "^1.8.6",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
